PI-1140 Engg Fix : HRMS : Multiple Role Assignment is leading to roles going out of the visible frame of the screen

--- a/web/rainmaker/dev-packages/egov-hrms-dev/src/ui-config/screens/specs/hrms/createResource/index.css
+++ b/web/rainmaker/dev-packages/egov-hrms-dev/src/ui-config/screens/specs/hrms/createResource/index.css
@@ -38,3 +38,7 @@
 .hrmsCityPicker > div {
   width: 100% !important;
 }
+
+#custom-containers-local-role div div div div{ 
+  flex-flow: wrap !important;
+}
